# DyldExtractorC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
DyldEx/: CMakeLists.txt  config.h.in  dyldex.cpp  dyldex_all.cpp  dyldex_all_multiprocess.cpp  dyldex_info.cpp  main.cpp
DyldExtractor/: CMakeLists.txt
DyldExtractor/Converter/: LinkeditOptimizer.cpp  LinkeditOptimizer.h  Objc.h  OffsetOptimizer.cpp  OffsetOptimizer.h  Rebase.h  Slide.cpp  Slide.h  Stubs.cpp  Stubs.h
DyldExtractor/Converter/Linkedit/: Linkedit.h  MetadataGenerator.cpp  MetadataGenerator.h  Optimizer.cpp  Optimizer.h
DyldExtractor/Converter/Linkedit/Encoder/: BindingV1.cpp  BindingV1.h  Chained.cpp  Chained.h  Encoder.h  LegacyGenerator.cpp  LegacyGenerator.h  RebaseV1.cpp  RebaseV1.h
DyldExtractor/Converter/Objc/: Atoms.h  Objc.cpp  Objc.h  ObjcFixer.cpp  ObjcFixer.h  Placer.cpp  Placer.h  SelectorFixer.h  Walker.cpp  Walker.h
DyldExtractor/Converter/Rebase/: RebaseGenerator.cpp  RebaseGenerator.h  RebaseV1.cpp  RebaseV1.h
DyldExtractor/Converter/Stubs/: Arm64Fixer.cpp  Arm64Fixer.h  Arm64Utils.cpp  Arm64Utils.h  ArmFixer.cpp  ArmFixer.h  ArmUtils.cpp  ArmUtils.h  Fixer.cpp  Fixer.h  StubFixer.cpp  StubFixer.h  Stubs.cpp  Stubs.h  SymbolPointerCache.cpp  SymbolPointerCache.h  SymbolicInfo.cpp  SymbolicInfo.h  Symbolizer.cpp  Symbolizer.h
DyldExtractor/Dyld/: Context.cpp  Context.h
DyldExtractor/Logger/: Activity.cpp  Activity.h  ActivityLogger.cpp  ActivityLogger.h
DyldExtractor/Macho/: BindInfo.cpp  BindInfo.h  Context.cpp  Context.h  LoadCommands.h  Loader.h
DyldExtractor/Objc/: Abstraction.h
DyldExtractor/Provider/: Accelerator.h  ActivityLogger.cpp  ActivityLogger.h  BindInfo.cpp  BindInfo.h  Disassembler.cpp  Disassembler.h  ExtraData.cpp  ExtraData.h  FunctionTracker.cpp  FunctionTracker.h  LinkeditTracker.cpp  LinkeditTracker.h  PointerTracker.cpp  PointerTracker.h  README.md  SymbolTableTracker.cpp  SymbolTableTracker.h  Symbolizer.cpp  Symbolizer.h  Validator.cpp  Validator.h
DyldExtractor/Utils/: Accelerator.h  Architectures.h  ExtractionContext.cpp  ExtractionContext.h  HeaderTracker.cpp  HeaderTracker.h  Leb128.cpp  Leb128.h  PointerTracker.cpp  PointerTracker.h  Uleb128.cpp  Uleb128.h  Utils.h
DyldExtractor/dyld/: Context.cpp  Context.h
Tests/: CMakeLists.txt  main.cpp
Tests/DyldExtractor/: Stubs.cpp
Tests/IntegrationTests/: RunAllCaches_AllImages.py  RunAllCaches_SingleImage.py
