cmake_minimum_required(VERSION 3.12)

add_executable(dyldex dyldex.cpp)
target_link_libraries(dyldex PRIVATE DyldExtractor)
target_link_libraries(dyldex PRIVATE spdlog::spdlog)
target_link_libraries(dyldex PRIVATE argparse::argparse)
target_link_libraries(dyldex PRIVATE fmt::fmt)

add_executable(dyldex_all dyldex_all.cpp)
target_link_libraries(dyldex_all PRIVATE DyldExtractor)
target_link_libraries(dyldex_all PRIVATE spdlog::spdlog)
target_link_libraries(dyldex_all PRIVATE argparse::argparse)
target_link_libraries(dyldex_all PRIVATE fmt::fmt)

add_executable(dyldex_all_multiprocess dyldex_all_multiprocess.cpp)
target_link_libraries(dyldex_all_multiprocess PRIVATE DyldExtractor)
target_link_libraries(dyldex_all_multiprocess PRIVATE spdlog::spdlog)
target_link_libraries(dyldex_all_multiprocess PRIVATE argparse::argparse)
target_link_libraries(dyldex_all_multiprocess PRIVATE fmt::fmt)
target_link_libraries(dyldex_all_multiprocess PRIVATE ${Boost_LIBRARIES})